--- a/Release Environment/App/AppInfo/appinfo.ini
+++ b/Release Environment/App/AppInfo/appinfo.ini
@@ -3,12 +3,12 @@ Type=PortableApps.comFormat
 Version=3.0
 
 [Details]
-Name=Evernote Sticky Portable
-AppId=EvernoteStickyPortable
-Publisher=Evernote Sticky Project
+Name=CloudSticky Portable
+AppId=CloudStickyPortable
+Publisher=CloudSticky Project
 Homepage=http://sourceforge.jp/projects/evernote-sticky/
 Category=Security or Utilities
-Description=Evernote Sticky Utilitiy
+Description=CloudSticky(currently Evernote) Utility
 Language=Multilingual
 Trademarks=
 InstallType=
@@ -21,8 +21,8 @@ CommercialUse=true
 EULAVersion=0
 
 [Version]
-PackageVersion=1.3.0.0
-DisplayVersion=1.3
+PackageVersion=1.0.0.0
+DisplayVersion=1.0
 
 [SpecialPaths]
 Plugins=NONE
@@ -33,5 +33,5 @@ UsesDotNetVersion=
 
 [Control]
 Icons=1
-Start=EvernoteStickyPortable.exe
+Start=CloudStickyPortable.exe
 ExtractIcon=App\AppInfo\appicon.ico
