add main files(need after subtree/submodule)

--- a/Launcher Environment/App/AppInfo/appinfo.ini
+++ b/Launcher Environment/App/AppInfo/appinfo.ini
@@ -7,7 +7,7 @@ Name=CloudSticky Portable
 AppId=CloudStickyPortable
 Publisher=CloudSticky Project
 Homepage=http://sourceforge.jp/projects/evernote-sticky/
-Category=Security or Utilities
+Category=Utilities
 Description=CloudSticky(currently Evernote) Utility
 Language=Multilingual
 Trademarks=
