--- a/Release Environment/App/AppInfo/Launcher/CloudStickyPortable.ini
+++ b/Release Environment/App/AppInfo/Launcher/CloudStickyPortable.ini
@@ -6,6 +6,8 @@ WorkingDirectory="%PAL:DataDir%\Sticky"
 WaitForProgram=true
 WaitForOtherInstances=false
 SinglePortableAppInstance=false
+DirectoryMoveOK=yes
+SupportsUNC=yes
 
 [Source]
 IncludeInstallerSource=false
